crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_tag_arg_end.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error E { :a(Number Number) }"
---
Tag(
    ArgEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 13,
            },
            boundary: Position {
                line: 1,
                column: 20,
            },
            unexpected: Position {
                line: 1,
                column: 21,
            },
        },
    ),
    1,
    11,
)
