crates/alder-parse/src/item/snapshots/alder_parse__item__error___tests__error_unclosed.snap
---
source: crates/alder-parse/src/item/error_.rs
description: "error E { :a, :b"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 9,
        },
        boundary: Position {
            line: 1,
            column: 17,
        },
        unexpected: Position {
            line: 1,
            column: 17,
        },
    },
)
